tests/parser/valid/expressions/arithmetic.src
fn test() {
    int a = 1 + 2;
    int b = 3 - 4;
    int c = 5 * 6;
    int d = 8 / 2;
    int e = 10 % 3;
    int f = (1 + 2) * 3;
    int g = -5;
}
