tests/parser/invalid/syntax_errors/invalid_expression.src
fn test() {
    int x = * 5;  // Invalid expression
    return x;
}